# CudaRaytracer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  main.cu
include/: camera.cuh  color.cuh  hittable.cuh  hittable_list.cuh  material.cuh  random.cuh  ray.cuh  sphere.cuh  utils.cuh  vec3.cuh
